updates the docker compose

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -11,8 +11,6 @@ jobs:
       - name: Checkout infra repo
         uses: actions/checkout@v4
 
-      - name: Pull images
-        run: docker compose pull
-
-      - name: Run containers
-        run: docker compose up -d
+      - name: Build and run services
+        run: |
+          docker compose up --build -d
