--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,8 +15,8 @@ services:
 
 
   backend:
-    image: ramaayoub/taskapp-backend:latest
-    container_name: taskapp-backend
+    build: ../backend
+    image: taskapp-backend:latest
     environment:
       PORT: 3002
       DBHost: postgres
@@ -31,8 +31,8 @@ services:
     restart: unless-stopped
 
   frontend:
-    image: ramaayoub/taskapp-frontend:latest
-    container_name: taskapp-frontend
+    build: ../backend
+    image: taskapp-frontend:latest
     environment:
       REACT_APP_API_URL: "http://localhost:3002"
       CHOKIDAR_USEPOLLING: "true"
